[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM Precompiles - Ethereum compatible precompiled contracts"
edition = "2018"
keywords = ["no_std", "ethereum", "evm", "precompiles"]
license = "MIT"
name = "revm_precompiles"
repository = "https://github.com/bluealloy/revm"
version = "0.2.0"

[dependencies]
bn = {package = "substrate-bn", version = "0.6", default-features = false}
borsh = {version = "0.9", default-features = false}
bytes = {version = "1.1", default-features = false}
num = {version = "0.4.0", default-features = false, features = ["alloc"]}
primitive-types = {version = "0.10", default-features = false, features = ["rlp"]}
ripemd160 = {version = "0.9.1", default-features = false}
secp256k1 = {version = "0.20", default-features = false, features = ["alloc", "recovery"], optional = true}
sha2 = {version = "0.9.3", default-features = false}
sha3 = {version = "0.9.1", default-features = false}
#k256 = { version="0.9", default-features = false, features = ["ecdsa","keccak256"]}

[dev-dependencies]
hex = "0.4"

[features]
default = ["ecrecover"]
ecrecover = ["secp256k1"]
