[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM Precompiles - Ethereum compatible precompiled contracts"
edition = "2021"
keywords = ["no_std", "ethereum", "evm", "precompiles"]
license = "MIT"
name = "revm_precompiles"
repository = "https://github.com/bluealloy/revm"
version = "1.1.2"

[dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
bytes = { version = "1.1", default-features = false }
hashbrown = { version = "0.13" }
k256 = { version = "0.11", default-features = false, features = ["ecdsa", "keccak256"], optional = true }
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
once_cell = "1.14"
ripemd = { version = "0.1", default-features = false }
ruint = { version = "1.7.0", default-features = false}
secp256k1 = { version = "0.25.0", default-features = false, features = ["alloc", "recovery"], optional = true }
sha2 = { version = "0.10.5", default-features = false }
sha3 = { version = "0.10.4", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["secp256k1"]
k256_ecrecover = ["k256"]

