[package]
name = "revm_wasm"
version = "0.1.0"
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM WASM - Rust Ethereum Virtual Machine Web Assembly lib"
license = "MIT/Apache-2.0"
repository = "https://github.com/bluealloy/revm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
revm = {path = "../revm", version="0.3", default-features=false, features=["ecrecover"]} 
getrandom = {version="0.2", features=["js"]}