[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM WASM - Rust Ethereum Virtual Machine Web Assembly lib"
edition = "2018"
keywords = ["ethereum", "evm", "rust"]
license = "MIT"
name = "revmjs"
repository = "https://github.com/bluealloy/revm"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.1"
getrandom = {version = "0.2", features = ["js"]}
hex = "0.4"
js-sys = "0.3"
primitive-types = {version = "0.10", default-features = false, features = ["rlp", "rustc-hex"]}
# for windows build remove ecrecover features. see more here: https://github.com/bluealloy/revm/issues/3
revm = {path = "../revm", version = "1.1", default-features = false}#, features = ["ecrecover"]}
wasm-bindgen = "0.2"
bn-rs = "0.2"