[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM WASM - Rust Ethereum Virtual Machine Web Assembly lib"
edition = "2021"
keywords = ["ethereum", "evm", "rust"]
license = "MIT"
name = "revmjs"
repository = "https://github.com/bluealloy/revm"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bn-rs = "0.2.3"
bytes = "1.2"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3"
primitive-types = { version = "0.12", default-features = false }
revm = { path = "../revm", version = "2.0", default-features = false, features = ["k256"] }
ruint = { version = "1.6.0", features = ["primitive-types", "bn-rs"] }
wasm-bindgen = "0.2"
