[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "revm - Rust Ethereum Virtual Machine"
edition = "2021"
keywords = ["no_std", "ethereum", "evm", "revm"]
license = "MIT"
name = "revm-rwasm"
repository = "https://github.com/bluealloy/revm"
version = "3.5.0"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
proc-macro = false

[dependencies]
revm-primitives = { path = "../primitives", version = "1.3.0", default-features = false }

# rwasm
fluentbase-codec = { workspace = true, default-features = false }
fluentbase-sdk = { workspace = true, default-features = false, features = ["evm"] }
fluentbase-types = { workspace = true, default-features = false }
#fluentbase-core = { git = "https://github.com/fluentlabs-xyz/fluentbase.git", branch = "devel", default-features = false }
#fluentbase-core = { git = "https://github.com/fluentlabs-xyz/fluentbase.git", branch = "FLU-56-based-on-no-tracer", default-features = false }
fluentbase-core = { path = "../../../fluentbase/crates/core", default-features = false }

# rwasm runtime
fluentbase-runtime = { workspace = true, optional = true, default-features = false }
rwasm = { workspace = true, optional = true, default-features = false }
rwasm-codegen = { workspace = true, optional = true, default-features = false }
#rwasm-codegen = { path = "../../../rwasm/codegen", optional = true, default-features = false }

#misc
auto_impl = { version = "1.1", default-features = false }
byteorder = { version = "1.5.0", default-features = false }

# Optionalc-kzg
serde = { version = "1.0", default-features = false, features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }

# ethersdb
tokio = { version = "1.33", features = [
    "rt-multi-thread",
    "macros",
], optional = true }
ethers-providers = { version = "2.0", optional = true }
ethers-core = { version = "2.0", optional = true }
futures = { version = "0.3.27", optional = true }

[dev-dependencies]
#ethers-contract = { version = "2.0.10", default-features = false }
anyhow = "1.0.75"
criterion = "0.5"
hex-literal = "0.4.1"

[features]
default = ["std", "runtime"]
std = []
serde = ["dep:serde"]
arbitrary = []
# enable runtime for fluentbase
runtime = ["fluentbase-sdk/runtime", "dep:fluentbase-runtime", "dep:rwasm", "dep:rwasm-codegen"]
sdk = ["fluentbase-sdk/evm", "dep:rwasm-codegen"]
optimism = []
ethersdb = ["std", "tokio", "futures", "ethers-providers", "ethers-core"]
dev = []
