[package]
name = "revm-specification"
description = "Ethereum hardforks and EIP specification structs and constants"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
primitives = { path = "../primitives", package = "revm-primitives", version = "9.0.1", default-features = false }

# alloy
alloy-eips = { version = "0.3", default-features = false, features = ["k256"] }
alloy-primitives = { version = "0.8.2", default-features = false, features = [
    "rlp",
] }

# misc
enumn = { version = "0.1" }

# Optional
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
], optional = true }


[dev-dependencies]

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde", "alloy-eips/serde", "alloy-primitives/serde"]
serde-json = ["serde"]
