[package]
name = "revm-specification"
description = "Ethereum hardforks and EIP specification structs and constants"
version = "1.0.0-alpha.2"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
primitives.workspace = true

# misc
enumn.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde"]
serde-json = ["serde"]
