[package]
name = "revm-state"
description = "Revm state types"
version = "8.0.2"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# revm
primitives.workspace = true
bytecode.workspace = true

# misc
bitflags.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[features]
default = ["std"]
std = ["serde?/std", "primitives/std", "bitflags/std", "bytecode/std"]
serde = ["dep:serde", "primitives/serde", "bitflags/serde", "bytecode/serde"]
